<resources>
    <string name="app_name">CMPT276_Assignment_3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_ws_Title1">Vice</string>
    <string name="tv_ws_Title2">Milkyway</string>
    <string name="tv_ws_Skip">INSERT COIN(S) OR CLICK ANYWHERE TO SKIP</string>
    <string name="tv_ws_Author">by Shaheen Eshghi™℠</string>
    <string name="title_activity_help_screen">HelpScreen</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="title_activity_options_screen">OptionsScreen</string>
    <string name="tv_hs_Author">About Author</string>
    <string name="tv_hs_Author_a">My name is Shaheen Eshghi.\nI hate computer science but, I am pretty good at it.\nI am enrolled in CMPT 276 under Dr. Brian Fraser.</string>
    <string name="tv_hs_Courselink">https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home</string>
    <string name="ts_hs_Howto">How You Play?</string>
    <string name="tv_hs_Howto_a">There are mobsters hiding under random cells in a field. You must find them all. This is accomplished by tapping on cells to inspect their content. The cells will either reveal a mobster or a number denoting the tally of mobsters in that cell\'s row and column. Use this information to make coordinated decisions as to which cell to inspect next. The fewer cells inspected to find the mobsters, the better.</string>
    <string name="tv_hs_Source">Sources:</string>
    <string name="tv_hs_Source_a1">www.artstation.com/artwork/Jrzzz</string>
    <string name="btn_mm_Start">Play\nMilkyway Vice</string>
    <string name="btn_mm_Options">Options</string>
    <string name="btn_mm_Help">Help</string>
    <string name="tv_os_Header">Options</string>
    <string name="tv_mm_Header">Menu</string>
    <string name="tv_hs_Header">Help</string>
    <string name="tv_os_BSize">Board Size</string>
    <string name="tv_os_Mines">#Mines</string>
    <string name="tv_gs_MFound">mines found:</string>
    <string name="tv_gs_Scans">scans used:</string>
    <string name="tv_gs_Total">times played:</string>
    <string name="tv_hs_Source_a2">www.artstation.com/artwork/J3Wq0</string>
    <string name="tv_hs_Source_a3">www.soundfishing.eu/sound/laser-gun</string>
    <string name="btn_os_Clear">Reset Times Played</string>
    <string name="btn_os_Save">Save</string>
    <string name="tv_vm_Header">Congratulations! You are victorious!</string>

    <string-array name="arr_BSize">
        <item>Four x Six</item>
        <item>Five x Ten</item>
        <item>Six x Fifteen</item>
    </string-array>

    <string-array name="arr_Mines">
        <item>Six</item>
        <item>Ten</item>
        <item>Fifteen</item>
        <item>Twenty</item>
    </string-array>


</resources>