<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navGraph="@navigation/nav_graph" />

    <TextView
        android:id="@+id/tv_ws_Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/tv_ws_Title1"
        android:textColor="#FF00A9"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
         />

    <TextView
        android:id="@+id/tv_ws_Title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/tv_ws_Title2"
        android:textColor="#FF00A9"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/tv_ws_Skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:text="@string/tv_ws_Skip"
        android:textColor="#FFE500"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_ws_Author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:fontFamily="casual"
        android:text="@string/tv_ws_Author"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="normal" />


</RelativeLayout>